--- a/Tableau_Viz.ipynb
+++ b/Tableau_Viz.ipynb
@@ -19,7 +19,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This image above shows the relationshup between the main types Molecule and their interactions to different atoms. It is a simple and great visualization to see how often a specific type of molecule shows up"
+    "#### This image above shows the relationshup between the main types Molecule and their interactions to different atoms. It is a simple and great visualization to see how often a specific type of molecule shows up\n",
+    "\n",
+    "\n",
+    "I tried to upload the interactive images to my tableau profile but it is not working. So this static image would have to do for now"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"files/ScalarVsMoleculeType.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This shows how each molecule type variables are related to my main target, the scalar coupling constant. All negative numbers were ignored (44 cases out of 44,000 or so). Here, we see that 1JHC has the biggest relation to scalar constant while on the previous picture we see that it was 3JHC that had the most interaction with atom interactions.\n",
+    "\n",
+    "This can potentially give insight on how the molecules interact."
    ]
   },
   {
