--- a/KaggleSet.ipynb
+++ b/KaggleSet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,9 @@
     "%matplotlib inline\n",
     "import networkx as nx\n",
     "import seaborn as sns\n",
-    "from sklearn import preprocessing\n",
+    "from sklearn import preprocessing, tree\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import cross_validate, cross_val_score, GridSearchCV\n",
     "from sklearn.linear_model import LinearRegression\n",
     "import lightgbm\n",
     "from sklearn.model_selection import KFold\n",
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11560,7 +11562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -11578,7 +11580,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11590,7 +11592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11619,7 +11621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11628,7 +11630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -11637,7 +11639,7 @@
        "MinMaxScaler(copy=True, feature_range=(0, 1))"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11649,7 +11651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -11670,7 +11672,7 @@
        "        0.47675609]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11682,7 +11684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -12042,7 +12044,7 @@
        "[4658147 rows x 40 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12054,7 +12056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -12427,7 +12429,7 @@
        "[4658147 rows x 40 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12473,7 +12475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -12501,7 +12503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13408,11 +13410,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_fold = 3\n",
+    "folds = KFold(n_splits=n_fold, shuffle=True, random_state=11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameter={\n",
+    "    'criterion': ['mse'],\n",
+    "    'max_depth': [13],\n",
+    "    'max_features': ['auto'],\n",
+    "    'min_samples_leaf': [2],\n",
+    "    'min_samples_split': [2],\n",
+    "    'n_estimators': [500],\n",
+    "    'random_state': [1], \n",
+    "    'verbose': [0]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv='warn', error_score='raise-deprecating',\n",
+       "             estimator=RandomForestRegressor(bootstrap=True, criterion='mse',\n",
+       "                                             max_depth=None,\n",
+       "                                             max_features='auto',\n",
+       "                                             max_leaf_nodes=None,\n",
+       "                                             min_impurity_decrease=0.0,\n",
+       "                                             min_impurity_split=None,\n",
+       "                                             min_samples_leaf=1,\n",
+       "                                             min_samples_split=2,\n",
+       "                                             min_weight_fraction_leaf=0.0,\n",
+       "                                             n_estimators='warn', n_jobs=None,\n",
+       "                                             oob_score=False, random_state=None,\n",
+       "                                             verbose=0, warm_start=False),\n",
+       "             iid='warn', n_jobs=-1,\n",
+       "             param_grid={'criterion': ['mse'], 'max_depth': [13],\n",
+       "                         'max_features': ['auto'], 'min_samples_leaf': [2],\n",
+       "                         'min_samples_split': [2], 'n_estimators': [500],\n",
+       "                         'random_state': [1], 'verbose': [0]},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid= GridSearchCV(estimator=RandomForestRegressor(), param_grid=parameter, n_jobs=-1)\n",
+    "grid"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gridresult= grid.fit(feature_array, target_array)\n",
+    "gridresult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gridbestparam= gridresult.best_params_\n",
+    "gridbestparam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gridresult.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tune1= RandomForestRegressor(max_depth=gridbestparam['max_depth'], n_estimators=gridbestparam['n_estimators'],\n",
+    "                            criterion=gridbestparam['criterion'], min_samples_leaf=gridbestparam['min_samples_leaf'],\n",
+    "                            min_samples_split=gridbestparam['min_samples_split'], random_state=1, n_jobs=-1, verbose=0)"
+   ]
   }
  ],
  "metadata": {
