minor change, check csv format

--- a/KaggleSet.ipynb
+++ b/KaggleSet.ipynb
@@ -12651,8 +12651,8 @@
     }
    ],
    "source": [
-    "# target_test= target_test.reset_index()\n",
-    "# target_test=target_test.drop(['level_0', 'index'], axis=1)\n",
+    "target_test= target_test.reset_index()\n",
+    "target_test=target_test.drop(['index'], axis=1)\n",
     "target_test=target_test.rename(columns={'scalar_coupling_constant': 'Actual Test Scalar'})\n",
     "target_test"
    ]
@@ -13299,6 +13299,136 @@
    "outputs": [],
    "source": [
     "accuracy_check.to_csv('accuracy_check.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Actual Test Scalar</th>\n",
+       "      <th>Predicted Ridge Scalar</th>\n",
+       "      <th>Predicted Lasso Scalar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>9.66433</td>\n",
+       "      <td>9.664347</td>\n",
+       "      <td>9.667315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>47.67580</td>\n",
+       "      <td>47.675764</td>\n",
+       "      <td>47.666287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>4.00193</td>\n",
+       "      <td>4.001930</td>\n",
+       "      <td>4.004808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>85.52030</td>\n",
+       "      <td>85.520365</td>\n",
+       "      <td>85.517452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>83.51210</td>\n",
+       "      <td>83.512104</td>\n",
+       "      <td>83.515859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>465810</td>\n",
+       "      <td>5.12665</td>\n",
+       "      <td>5.126647</td>\n",
+       "      <td>5.128488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>465811</td>\n",
+       "      <td>-8.34834</td>\n",
+       "      <td>-8.348341</td>\n",
+       "      <td>-8.349595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>465812</td>\n",
+       "      <td>2.32870</td>\n",
+       "      <td>2.328698</td>\n",
+       "      <td>2.328015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>465813</td>\n",
+       "      <td>5.91876</td>\n",
+       "      <td>5.918757</td>\n",
+       "      <td>5.923849</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>465814</td>\n",
+       "      <td>2.61091</td>\n",
+       "      <td>2.610905</td>\n",
+       "      <td>2.610772</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>465815 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Actual Test Scalar  Predicted Ridge Scalar  Predicted Lasso Scalar\n",
+       "0                  9.66433                9.664347                9.667315\n",
+       "1                 47.67580               47.675764               47.666287\n",
+       "2                  4.00193                4.001930                4.004808\n",
+       "3                 85.52030               85.520365               85.517452\n",
+       "4                 83.51210               83.512104               83.515859\n",
+       "...                    ...                     ...                     ...\n",
+       "465810             5.12665                5.126647                5.128488\n",
+       "465811            -8.34834               -8.348341               -8.349595\n",
+       "465812             2.32870                2.328698                2.328015\n",
+       "465813             5.91876                5.918757                5.923849\n",
+       "465814             2.61091                2.610905                2.610772\n",
+       "\n",
+       "[465815 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc_chk= pd.read_csv('accuracy_check.csv')\n",
+    "acc_chk"
    ]
   },
   {
