add ridge/lasso pic with explanation

--- a/Tableau_Viz.ipynb
+++ b/Tableau_Viz.ipynb
@@ -42,6 +42,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"TargetVsLassoRidge.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This shows the accuracy of my ridge and lasso models. Since it is a bit tricky to check for accuracy among three continuous columns, using tableau, I used the COUNT function for all columns as a form of filter and then created a SUM linear graph with the Actual Test Scalar being the main component. The size shows concentration of most of the numbers and it does not really play any role in the bigger scheme of the project. However, a clear line of best fit can easily be drawn showing that the algorithms I used can be used to predict molecular scalar constant charge."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
